# project-aiq

./: .gitignore  README.md  docker-compose.yml  infra.drawio  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
.github/..github/: PULL_REQUEST_TEMPLATE.md
.husky/: commit-msg
apps/backend/: Dockerfile  package.json  tsconfig.json
apps/backend/src/: app.controller.ts  app.module.ts  app.service.ts  main.ts
apps/backend/src/config/: ai-service.config.ts
apps/backend/src/dto/: chat-request.dto.ts  chat-response.dto.ts
apps/web/: Dockerfile  app.py  package.json
docs/: infra.drawio
services/ai/: .env.example  Dockerfile  main.py  package.json  requirements.txt
services/ai-engine/: .env.example  README.md  main.py  package.json  pyproject.toml
services/ai-engine/app/: main.py  test.py
services/ai-engine/app/config/: __init__.py  agents.json  agents.yaml  crews.json  env.py  models.json  models.yaml  settings.py  tools.py
services/ai-engine/app/models/: __init__.py  agents.py  chat.py  completions.py  crews.py  tools.py
services/ai-engine/app/routes/: __init__.py
services/ai-engine/app/routes/v1/: agents.py  completion.py  crews.py  models.py  tools.py
services/ai-engine/app/schemas/: base.py  chat.py  completions.py
services/ai-engine/app/services/: README.md  __init__.py  agents.py  completions.py  crews.py  models.py  tools.py
services/ai-engine/app/services/agents/: agents.py
services/ai-engine/app/services/completion/: completion.py
services/ai-engine/app/services/crews/: crews.py
services/ai-engine/app/services/models/: models.py
services/ai-engine/app/services/tools/: tools.py
services/ai-engine/crewai/: crew.py  main.py
services/ai-engine/crewai/config/: agents.yaml  tasks.yaml
services/ai-engine/crewai/models/: __init__.py  document_search.py
services/ai-engine/crewai/tools/: __init__.py  document_search.py
services/ai/app/: main.py
services/ai/app/config/: __init__.py  settings.py
services/ai/app/crewai/: crew.py  main.py
services/ai/app/crewai/config/: agents.yaml  tasks.yaml
services/ai/app/models/: chat.py  embedding.py
services/ai/app/routers/v1/: chat.py  embedding.py
services/ai/app/services/: chat_service.py  crewai_service.py  embedding_service.py
services/ai/embedder/: embed.py
services/ai/embedder/bge-m3/onnx/: model.onnx_data
services/chat-service/: README.md  main.py  package.json  pyproject.toml
services/embedding-service/: README.md  main.py  package.json  pyproject.toml
